# CS236-project1

./: Automaton.h  CMakeLists.txt  FSA_Comma.h  FSA_Comment.h  FSA_ID.h  FSA_String.h  Lexer.cpp  Lexer.h  QueriesFSA.h  Token.h  lookHere.txt  main.cpp  testCase.txt
